<resources>
    <string name="app_name">Mobile Banking</string>
    <string name="app_title">BDB FOB Online</string>
    <string name="comapny">Bhutan Development Bank</string>
    <string name="main_logo">Main Logo</string>
    <string name="login_title">Mobile Banking</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_image">Company Logo</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_waiting">Waiting to automatically detect an sms sent to +975%1$s</string>
    <string name="trans_otp_waiting">Waiting for OTP input sent to +975%1$s</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_connected">Device not connected to Internet!</string>
    <string name="no_internet">Device connected to network but no Internet connection!</string>

    <string name="menu_home">Home</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="register_a_customer">Register a customer</string>
    <string name="calculator">Calculator</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="communicate">Communicate</string>
    <string name="deposit">Deposit</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="repayment_of_loan">Repayment of Loan</string>
    <string name="balance_statement">Balance Statement</string>
    <string name="balance_statement_caps">BALANCE STATEMENT</string>
    <string name="check_balance_amount">Check Balance Amount</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="version">Version 1.0.0</string>
    <string name="bdbl">Bhutan Development Bank</string>
    <string name="print_recipt">Print Recipt</string>
    <string name="recent_transactions">Transaction History</string>
    <string name="deposit_successful">Deposit Successful</string>
    <string name="deposit_statement">You have decided to deposit a sum of Nu.%1$s to account %2$s of %3$s %4$s</string>
    <string name="loan_statement">You have decided to deposit a sum of Nu.%1$s to loan account %2$s of %3$s %4$s</string>
    <string name="withdraw_statement">You have decided to withdraw a sum of Nu.%1$s from account %2$s of %3$s %4$s</string>
    <string name="deposit_confirmation">Are you sure you want to perform this action?</string>
    <string name="action_review">ACTION REVIEW</string>
    <string name="dr">Dr</string>
    <string name="cr">Cr</string>
    <string name="yes">Yes</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="account_number">Account Number:</string>
    <string name="deposit_form">Deposit Form</string>
    <string name="withdrawal_form">Withdrawal Form</string>
    <string name="amount">Amount:\u0020</string>
    <string name="withdrawal_otp">Withdrawal OTP</string>
    <string name="confirm">Confirm</string>
    <string name="withdrawal_successful">Withdrawal Successful</string>
    <string name="available_balance">Available Balance (Nu)</string>
    <string name="print_receipt_copy">Print Receipt Copy</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanner_tips">Tips: For best results, make sure the camera lens is clean.</string>
    <string name="try_again">Try Again</string>
    <string name="fetching">Fetching</string>
    <string name="reference_no">Reference No:\u0020</string>
    <string name="transaction_mode">Transaction Mode:\u0020</string>
    <string name="from_account">From Account:\u0020</string>
    <string name="to_account">To Account:\u0020</string>
    <string name="check">Check</string>
    <string name="result_fail">Service down. Please contact system administrator</string>
    <string name="result_success">Everything looks good!</string>
    <string name="fund_transfer_form">Fund Transfer Form</string>
    <string name="customer_name">%1$s %2$s</string>
    <string name="fund_transfer_statememt">%1$s is deciding to transfer to %2$s</string>
    <string name="transfer_statement">%1$s has decided to transfer a sum of Nu.%2$s to %3$s</string>
    <string name="notice_empty">Field cannot be empty.</string>
    <string name="notice_amt">Amount cannot be less than Nu.1</string>
    <string name="no_trans">No transactions today</string>
    <string name="no_trans_this_month">No transactions this month</string>
    <string name="no_trans_last_month">No transactions last month</string>
    <string name="fund_transfer_otp">Fund Transfer OTP</string>
    <string name="fund_transfer_successful">Fund Transfer Successful</string>
    <string name="loan_payment_successful">Loan Payment Successful</string>
    <string name="loan_balance_amount">Loan Balance Amount</string>
    <string name="account_holder">Account Holder</string>
    <string name="my_balance">My Balance</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_match">Passwords do not match</string>
    <string name="current_balance">Current Balance</string>
    <string name="opening_amount">Opening Amount</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="send_password_reset_otp">Send Password Reset OTP</string>
    <string name="password_reset_verification_code">Password Reset Verification Code</string>
    <string name="logging_in">Logging in&#8230;&#8230;&#8230;</string>
    <string name="fob_agent">FOB Agent:\u0020</string>
    <string name="emp_id">Emp ID:\u0020</string>
    <string name="gender">Gender:\u0020</string>
    <string name="fob_area">FOB Area:\u0020</string>
    <string name="branch">Sol ID:\u0020</string>
    <string name="phone">Phone:\u0020</string>
    <string name="e_mail">E-mail:\u0020</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="today">Today</string>
    <string name="loan_repayment_form">Loan Repayment Form</string>
    <string name="developer">Developed by Kailash Rai</string>
    <string name="transaction_history_today">Transaction History (Today)</string>

</resources>