<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/my_statement"
            android:icon="@mipmap/ic_statement"
            android:title="@string/my_balance" />
        <item
            android:id="@+id/calculator"
            android:icon="@mipmap/ic_calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/password"
            android:icon="@mipmap/ic_password"
            android:title="@string/change_password" />
        <item
            android:id="@+id/recent_trans"
            android:icon="@mipmap/ic_transaction"
            android:title="@string/recent_transactions" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:icon="@mipmap/ic_contact"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/about_us"
                android:icon="@mipmap/ic_about"
                android:title="@string/about" />

            <item
                android:id="@+id/logout"
                android:icon="@mipmap/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
