<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/billabong"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/user_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_radius"
                android:drawableStart="@mipmap/ic_user"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwd_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_radius"
                android:drawableStart="@mipmap/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:text="@string/forgot_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="#FFFFFF" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/bdb"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_90sdp"
        android:background="@drawable/user_background"
        android:contentDescription="@string/login_image"
        android:elevation="4dp"
        android:src="@drawable/bdbl" />

</RelativeLayout>