<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="@dimen/_2sdp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/divider"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hist_trans_type"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/dr"
            android:textColor="@color/bootstrap_brand_danger"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hist_value_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="5dp"
                android:text="@string/amount"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hist_value_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center_vertical|end"
                android:text="@string/deposit"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>