<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MyStatement">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/opening_amount"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/opening_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="10000"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/current_balance"
        android:textSize="@dimen/_15sdp" />

    <com.comix.overwatch.HiveProgressView
        android:id="@+id/balance_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:hive_animDuration="1500"
        app:hive_color="@color/bootstrap_brand_success"
        app:hive_cornerRadius="20"
        app:hive_maxAlpha="220"
        app:hive_rainbow="false"
        app:hive_shrink="true" />

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/transaction_history_today" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp" />

</LinearLayout>